# diagnositic

./: .gitignore  CMakeLists.txt  arrow.cpp  arrow.h  commander.cpp  commander.h  diagnosis.json  diagnostic.qrc  diagram.cpp  diagram.h  element.cpp  element.h  main.cpp  mainwindow.cpp  mainwindow.h
